# DepPilot

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
homebrew/: deppilot.rb.template
npm/depclerk/: package.json
npm/deppilot/: package.json
npm/deppilot-darwin-arm64/: package.json
npm/deppilot-darwin-x64/: package.json
npm/deppilot-linux-arm64/: package.json
npm/deppilot-linux-x64/: package.json
npm/deppilot-win32-x64/: package.json
npm/deppilot-windows-x64/: package.json
npm/devpilot/: package.json
npm/pkgpilot/: package.json
scripts/: bump-version  check-release
src/: cli.rs  errors.rs  git.rs  main.rs  output.rs  package_json.rs  package_manager.rs  project.rs  prompt.rs  update.rs  validation.rs
