[package]
name = "deppilot"
version = "0.1.2"
edition = "2021"
description = "A dependency update assistant for JavaScript/TypeScript projects"
license = "MIT"
repository = "https://github.com/mauuleo/deppilot"
homepage = "https://github.com/mauuleo/deppilot"
keywords = ["dependencies", "npm", "yarn", "pnpm", "update"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "deppilot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
thiserror = "1"
anyhow = "1"
which = "6"

[dev-dependencies]
tempfile = "3"
